// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`next-build-parser > should parse the build file 1`] = `
{
  "routes": [
    {
      "firstLoad": 125,
      "route": "/",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 1.1,
    },
    {
      "firstLoad": 86.2,
      "route": "/_not-found",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 0.85,
    },
    {
      "firstLoad": 0,
      "route": "/api/trpc/[trpc]",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 0,
    },
    {
      "firstLoad": 140,
      "route": "/create",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 15.5,
    },
    {
      "firstLoad": 125,
      "route": "/popular",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 1.1,
    },
    {
      "firstLoad": 132,
      "route": "/puzzle/[id]",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 8.15,
    },
    {
      "firstLoad": 0,
      "route": "/puzzle/[id]/opengraph-image",
      "routeType": "Edge",
      "routeTypeIcon": "ℇ",
      "size": 0,
    },
    {
      "firstLoad": 125,
      "route": "/recent",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 1.1,
    },
  ],
  "sharedByAll": [
    {
      "chunk": "chunks/472-9100b5fcfec8f88c.js",
      "size": 30,
    },
    {
      "chunk": "chunks/fd9d1056-853251486b1823c6.js",
      "size": 53.3,
    },
    {
      "chunk": "chunks/main-app-842b2bfec3a562ae.js",
      "size": 0.23,
    },
    {
      "chunk": "chunks/webpack-b7a1470890cdd00b.js",
      "size": 1.79,
    },
  ],
  "sharedByAllTotal": 85.3,
  "unit": "kB",
}
`;

exports[`next-build-parser > should parse the build file and output based on the --output flag 1`] = `
{
  "routes": [
    {
      "firstLoad": 128000,
      "route": "/",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 1126.4,
    },
    {
      "firstLoad": 88268.8,
      "route": "/_not-found",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 875,
    },
    {
      "firstLoad": 0,
      "route": "/api/trpc/[trpc]",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 0,
    },
    {
      "firstLoad": 143360,
      "route": "/create",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 15872,
    },
    {
      "firstLoad": 128000,
      "route": "/popular",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 1126.4,
    },
    {
      "firstLoad": 135168,
      "route": "/puzzle/[id]",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 8345.6,
    },
    {
      "firstLoad": 0,
      "route": "/puzzle/[id]/opengraph-image",
      "routeType": "Edge",
      "routeTypeIcon": "ℇ",
      "size": 0,
    },
    {
      "firstLoad": 128000,
      "route": "/recent",
      "routeType": "Dynamic",
      "routeTypeIcon": "λ",
      "size": 1126.4,
    },
  ],
  "sharedByAll": [
    {
      "chunk": "chunks/472-9100b5fcfec8f88c.js",
      "size": 30720,
    },
    {
      "chunk": "chunks/fd9d1056-853251486b1823c6.js",
      "size": 54579.2,
    },
    {
      "chunk": "chunks/main-app-842b2bfec3a562ae.js",
      "size": 231,
    },
    {
      "chunk": "chunks/webpack-b7a1470890cdd00b.js",
      "size": 1832.96,
    },
  ],
  "sharedByAllTotal": 87347.2,
  "unit": "B",
}
`;
